# system_diagnostics

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
depcrecated/: CpuInfo.cpp  CpuInfo.h
include/: ConfigManager.h  CpuUsageCalculator.h  JsonManager.h  Printer.h  SystemInfo.h
scripts/: build.sh  make_install.sh  setup_env.sh
scripts/config/: env_config.sh
scripts/lib/: utilities.sh
src/: ConfigManager.cpp  CpuUsageCalculator.cpp  JsonManager.cpp  Printer.cpp  SystemInfo.cpp  main.cpp
